<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfiniteSheldon</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <color name="blanc">#ffffff</color>

    <string name="title">Bienvienu dans infinite Sheldon une app qui bat tous les voleurs</string>
    <string name="username">Username</string>
    <string name="hint_username">enter an username</string>
    <string name="Password">Password</string>
    <string name="hint_password">enter a password</string>
    <string name="email">Email</string>
    <string name="hint_email">entrez un email</string>
    <string name="buttontext">Infinite Sheldon</string>
    <string name="title_activity_watchman">Watchman</string>

</resources>